--- a/index.css
+++ b/index.css
@@ -16,10 +16,14 @@ button {
     font-family: 'Epilogue', sans-serif
 }
 
+button:focus {
+    outline: none;
+}
+
 a {
     color:hsl(0, 0%, 41%);
     text-decoration: none;
-    font-family: 'Epilogue', sans-serif
+    font-family: 'Epilogue', sans-serif;
 }
 
 /* default styles end */
@@ -55,6 +59,83 @@ header button img {
     width: 25px;
     height: 12px;
 }
+
+.navigationBar {
+    width: 100%;
+    height: 100vh;
+    z-index: 999;
+    position: absolute;
+    top: 0;
+    display: flex;
+    color: hsl(0, 0%, 41%);
+}
+
+.emptyDiv {
+    background-color: rgba(0, 0, 0, 0.212);
+    width: 35%;
+}
+
+.nav {
+    background-color: white;
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+}
+
+.nav > button {
+    font-size: 30px;
+    margin: 1rem 0 1rem 0 ;
+    align-self: flex-end;
+    border: none;
+    width: fit-content;
+    background: inherit;
+}
+
+.nav div {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.navitem ul {
+    list-style-type: none;
+    margin-left: 1.5rem;
+}
+
+.nav div a {
+    margin-left: 1.5rem;
+}
+
+.navitem ul > li {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+} 
+
+.navitem ul > ul {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 1rem;
+}
+
+.nav > div button:first-of-type {
+    border: none;
+    color:hsl(0, 0%, 41%);
+    align-self: center;
+    padding: 0.5rem 5rem;
+    background: inherit;
+}
+
+.nav > div button:last-of-type {
+    border: 1px solid hsl(0, 0%, 41%);
+    border-radius: 10px;
+    color:hsl(0, 0%, 41%);
+    align-self: center;
+    padding: 0.5rem 5rem;
+    background: inherit;
+}
+
 
 main {
     display: flex;
@@ -125,11 +206,12 @@ main div div img {
 .attribution { 
     font-size: 11px; 
     text-align: center; 
-    margin: 1rem 0;
+    margin-top: 1rem ;
 }
 .attribution a { 
     color: hsl(228, 45%, 44%); 
 }
+
 /* display toggle class */
 
 .hidden {
@@ -205,6 +287,10 @@ main div div img {
 
     .firstItem > ul {
         left: 6rem;
+    }
+
+    .navitem > ul > li {
+        cursor: pointer;
     }
 
     .navitem > ul > ul img {
